probando dejar recetas en array

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
     <div id="ingredientes"></div><br>
     <textarea placeholder="Procedimiento" id="procedimiento" name="procedimiento" rows="10" cols="90"></textarea><br>
-    <button type="submit">Guardar</button>
+    <button type="submit" id="guardar">Guardar</button>
   </form><br>
   <button id="mostrar">Mostrar</button>
   <div>
