Uso de libreria
se uso libreria sweet alert para generar alertas en el codigo

--- a/index.html
+++ b/index.html
@@ -29,5 +29,6 @@
     <p id="procedimientoReceta"></p>
 </div>
   <script src="script.js"></script>
+  <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 </html>
