se agrago archivo css y se corrijio recetas.json

--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
   </div>
   <h2>Recetas Demo</h2>
   <div id="listaRecetasJSON" class="row"></div>
+  <h2>Tus Recetas</h2>
+  <div id="listaRecetas"></div>
   <script src="script.js"></script>
   <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
