--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
   <h2>Tus Recetas</h2>
   <div id="listaRecetas"></div>
   <script src="script.js"></script>
+  <--! se ocupó esta libreria para evitar codigo malisioso!--->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/2.3.6/purify.min.js"></script>
   <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 </html>
