--- a/index.html
+++ b/index.html
@@ -28,12 +28,11 @@
   </form><br>
   <h2>Recetas Demo</h2>
   <div id="listaRecetasJSON" class="row"></div>
+  <div id="listaJsonModal"></div>
   <h2>Tus Recetas</h2>
   <div id="listaRecetas" class="row"></div>
   <div id="modalRecetas"></div>
-
-  <button onclick="eliminarReceta(id = 0)"> Delete User John</button>
-
+  <div id="listaJsonModal"></div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/2.3.6/purify.min.js"></script>
   <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
