arreglando el evento remove, quedo todo bien

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <section class="formSection">
       <form id="formRecipe" class="formRecipe">
         <input type="text" placeholder="Nombre de receta" id="recipeName" class="formName" name="recipeName">
-        <div class="formInputs">
+        <div id="formInputs" class="formInputs">
           <input type="text" placeholder="Cantidad" id="quantity0" class="quantityForm" name="quantity0">
           <input type="text" placeholder="Medida" id="measure0" class="measureForm" name="measure0">
           <input type="text" placeholder="Ingrediente" id="ingredient0" class="ingredientForm" name="ingredient0">
@@ -46,8 +46,6 @@
         <div id="modalRecipes"></div>
       </article>
     </section>
-    
-   
   </main>
   
   <!--bootstrap js-->
